# bimay_vicon_jadwal

./: Cargo.toml  LICENSE  README.md
.github/workflows/: dev-release.yml  lint.yml  release.yml
src/: config.rs  main.rs  schedule.rs  zoom.rs
src/template/: config.toml
