[package]
name = "bimay_vicon_jadwal"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webbrowser = "0"
directories = "4"
toml = "0.5"
indicatif = "0"
chrono = "0.4"