[package]
name = "bimay_vicon_jadwal"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1

[dependencies]
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "4"
toml = "0.5"
open = "2"
chrono = "0.4"
indoc = "1.0.7"
url = "2.3.1"
serde_qs = "0.10.1"
urlencoding = "2.1.2"
